<resources>
    <string name="app_name">Equibiz</string>
    <string name="login">Login</string>
    <string name="welcome_back_text">Welcome, Back!</string>
    <string name="login_back_text">Log back to your Equibiz account.</string>
    <string name="register">Register</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="or_text">OR</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="remember_text">"Remember "</string>
    <string name="create_account">Create Account!</string>
    <string name="register_sub">Sign up and start exploring Equibiz.</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="sign_up_with_text">Sign up with </string>
    <string name="_91">+91</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="user_profile">User Profile</string>
    <string name="shopping_basket">Shopping Basket</string>
    <string name="notification">Notifications</string>
    <string name="search">Search</string>
    <string name="share">Share</string>
    <string name="categories">Categories</string>
    <string name="product_name">Product Name</string>
    <string name="phone_category">Phones</string>
    <string name="laptop_category">Laptops</string>
    <string name="tablets_category">Tablets</string>
    <string name="accessories_category">Accessories</string>
    <string name="product_image">Product Image</string>
    <string name="recommendation_for_you">Recommendation for you</string>
    <string name="trending">Trending</string>
    <string name="search_products">Search Products</string>
    <string name="user_name">User Name</string>
    <string name="product_price">Product price</string>
    <string name="purchase_date">Purchase Date</string>
    <string name="product_company">Product Company</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="product_poster_image">Product Poster Image</string>
    <string name="specifications">Specifications</string>
    <string name="user_reviews">User Reviews</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="business_details">Business Details</string>
    <string name="you_are_registered">You are registered. Fill up the following details regarding your business.</string>
    <string name="business_name">Business Name</string>
    <string name="business_type">Business Type</string>
    <string name="proprietorship">Proprietorship</string>
    <string name="private_limited_company">Private Limited Company</string>
    <string name="llp">LLP</string>
    <string name="huf">HUF</string>
    <string name="address_of_registered_office">Address of Registered office</string>
    <string name="pincode">Pincode</string>
    <string name="contact_persons_details_optional">Contact Persons Details (Optional)</string>
    <string name="person_1_details">Person 1 Details</string>
    <string name="person_2_details">Person 2 Details</string>
    <string name="save_next"><![CDATA[Save & Next]]></string>
    <string name="partner_details">Partner Details</string>
    <string name="account_verification">Account Verification</string>
    <string name="share_the_following_details_to_have_a_verified_account">Share the following details to have a verified account.</string>
    <string name="gstin_number">GSTIN Number</string>
    <string name="document_upload">Document Upload</string>
    <string name="select_gstin_file_to_upload">Select GSTIN file to upload.</string>
    <string name="upload">Upload</string>
    <string name="pan_number">PAN Number</string>
    <string name="bank_details">Bank Details</string>
    <string name="file_type_should_be_png_jpg_jpeg_size_500kb"><![CDATA[File type should be png/jpg/jpeg & size < 500kb]]></string>
    <string name="bank_name">Bank Name</string>
    <string name="business_nature">Business Nature</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="account_number">Account Number</string>
    <string name="ifsc_number">IFSC Number</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="private_policy">Private Policy</string>
    <string name="previous">Previous</string>
    <string name="save_submit"><![CDATA[Save & Submit]]></string>
    <string name="product_specifications">Product Specifications</string>
    <string name="technical_specifications">Technical Specifications</string>
    <string name="ram">RAM</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="primary_camera">Primary Camera</string>
    <string name="battery_capacity">Battery Capacity</string>
    <string name="sim_slots">Sim Slots</string>
    <string name="expandable_upto">Expandable upto</string>
    <string name="front_camera">Front Camera</string>
    <string name="os">OS</string>
    <string name="network">Network</string>
    <string name="dimensions">Dimensions</string>
    <string name="processor">Processor</string>
    <string name="screen_size">Screen Size</string>
    <string name="seller">Seller</string>
    <string name="seller_name">Seller Name</string>
    <string name="total_quantity">Total Quantity</string>
    <string name="color">Color</string>
    <string name="order_quantity">Order Quantity</string>
    <string name="you_don_t_have_any_notifications">You don\'t have any notifications. Explore more for products.</string>
    <string name="orders">Orders</string>
    <string name="track_latest_order">Track Latest Order</string>
    <string name="order_booked">Order Booked!</string>
    <string name="order_history">Order History</string>
    <string name="order_pending">Order Pending</string>
    <string name="order_confirmed">Order Confirmed</string>
    <string name="order_canceled">Order Canceled</string>
    <string name="you_are_logged_in_as">You are logged in as:</string>
    <string name="office_registered_address">Office Registered Address</string>
    <string name="owner_mobile">Owner Mobile</string>
    <string name="owner_last_name">Owner Last Name</string>
    <string name="owner_first_name">Owner First Name</string>
    <string name="total_balance">Total Balance</string>
    <string name="available_balance">Available Balance</string>
    <string name="pending_balance">Pending Balance</string>
    <string name="confidential_details">Confidential Details</string>
    <string name="bank_branch">Bank Branch</string>
    <string name="bank_city">Bank City</string>
    <string name="faq">FAQ</string>
    <string name="support">Customer Support</string>
    <string name="about_company">About Company</string>
    <string name="logout">Logout</string>
    <string name="change_personal_details">Change Personal Details</string>
    <string name="order_confirming_msg">You are about to make the following action. \nPlease Check the Details before confirming.</string>
    <string name="delivery_location">Delivery Location</string>
    <string name="time">Time</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="additional_time">Additional Time</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="delivery_charges_rate_card">Delivery Charges Rate Card</string>
    <string name="price_per_unit">Price Per Unit (₹)</string>
    <string name="total_cost">Total Cost (₹)</string>
    <string name="pre_book_amount">Pre-Book Amount</string>
    <string name="pre_book_amount_note">Pre-Book amount is 10% of Total-Cost</string>
    <string name="insurance_50">Insurance (₹50)</string>
    <string name="cancel">Cancel</string>
    <string name="pre_order_now">Pre-Order Now</string>
    <string name="book_now">Book Now</string>
    <string name="close">Close</string>
    <string name="your_order_is_successfully_pre_booked_and_will_be_ordered_after_verification">Your order is successfully pre-booked and will be ordered after verification.</string>
    <string name="success">Success!!</string>
    <string name="verify">Verify</string>
    <string name="buyer">Buyer</string>
    <string name="you_are_login_as_a_buyer">You are login as a Buyer</string>
    <string name="you_are_login_as_seller">You are Login as a Seller</string>
    <string name="incorrect_mobile_number_and_password">Incorrect mobile number and Password.</string>
    <string name="who_are_you">Who Are You?</string>
    <string name="send_otp">Send Otp</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="save_resume_later"><![CDATA[Save & Resume Later]]></string>
    <string name="bank_branch_name">Bank Branch Name</string>
    <string name="wallet_details">Wallet</string>
    <string name="click_here_to_view_confidential_details">Click here to view confidential details</string>
    <string name="click_here_to_view_wallet_details_fill_wallet">Click here to view wallet details/fill wallet.</string>
    <string name="ohh_nooo_n_no_results_found">Ohh Nooo!! \n No Results Found</string>
    <string name="by_brand">By Brand</string>
    <string name="by_model">By Model</string>
    <string name="location">Location</string>
    <string name="delivery_time_days">Delivery Time (Days)</string>
    <string name="total_stock">Total Stock</string>
    <string name="profile">Profile</string>
    <string name="minimum_quantity">Minimum Quantity</string>
    <string name="home">Home</string>
    <string name="hub_location">Hub Location</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="submit">Submit</string>
    <string name="recover_account">Recover Account</string>
    <string name="welcome_back">Welcome back, ....!</string>
    <string name="your_account_progress">Your account progress.</string>
    <string name="title_activity_buyer_home">BuyerHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello">Hello, …!</string>
    <string name="go_back">Go Back</string>
    <string name="fill_wallet">Fill Wallet</string>
    <string name="title_activity_seller_home">SellerHomeActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="base_price">Base Price</string>
    <string name="base_price_low">Base Price Low</string>
    <string name="base_price_high">Base Price High</string>
    <string name="quantity">Quantity</string>
    <string name="dispatch_date">Dispatch Date</string>
    <string name="for_export_only">For Export Only</string>
    <string name="sold_out">Sold Out</string>
    <string name="t_transaction_date_buyer_makes_full_payment">[*T-Transaction date(buyer makes full payment)]</string>
    <string name="active">Active</string>
    <string name="product_listing">Product Listing</string>
    <string name="my_inventory">My Inventory</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pending_orders">Pending Orders</string>
    <string name="rate_card_details">Rate Card Details</string>
    <string name="seller_location">Seller Location :</string>
</resources>