<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~  * Created by Vaibhav Andhare on 9/7/20 5:15 PM
  ~  * Copyright (c) 2020 . All rights reserved.
  ~  */
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_product_list">

    <fragment
        android:id="@+id/nav_product_list"
        android:name="in.birdvision.equibiz.seller.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_product_listing"
        android:name="in.birdvision.equibiz.seller.ui.product_listing.ProductListingFragment"
        android:label="@string/product_listing"
        tools:layout="@layout/fragment_seller_admin_products" />

    <fragment
        android:id="@+id/nav_my_inventory"
        android:name="in.birdvision.equibiz.seller.ui.my_inventory.MyInventoryFragment"
        android:label="@string/my_inventory"
        tools:layout="@layout/fragment_seller_my_inventory" />

    <fragment
        android:id="@+id/nav_pending_orders"
        android:name="in.birdvision.equibiz.seller.ui.pendingOrders.PendingOrderFragment"
        android:label="@string/pending_orders"
        tools:layout="@layout/fragment_pending_order" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="in.birdvision.equibiz.userInfo.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_buyer_profile" />

    <fragment
        android:id="@+id/nav_wallet"
        android:name="in.birdvision.equibiz.userInfo.profile.WalletFragment"
        android:label="@string/wallet_details"
        tools:layout="@layout/fragment_wallet" />


</navigation>