<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_product_list">

    <fragment
        android:id="@+id/nav_product_list"
        android:name="in.birdvision.equibiz.buyer.ui.product.ProductListFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_product_list" />

    <fragment
        android:id="@+id/nav_orders"
        android:name="in.birdvision.equibiz.buyer.ui.orders.OrderFragment"
        android:label="@string/orders"
        tools:layout="@layout/fragment_order" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="in.birdvision.equibiz.buyer.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_buyer_profile" />

    <fragment
        android:id="@+id/nav_wallet"
        android:name="in.birdvision.equibiz.buyer.ui.profile.WalletFragment"
        android:label="@string/wallet_details"
        tools:layout="@layout/fragment_wallet" />
</navigation>