<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".orders.ConfirmOrderActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:text="@string/order_confirming_msg"
        android:textColor="@color/dark_blue"
        android:textSize="15sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_weight="1"
        android:gravity="center"
        android:stretchColumns="*">

        <TableRow>

            <TextView
                android:fontFamily="@font/montserrat"
                android:padding="5dp"
                android:text="@string/color"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:fontFamily="@font/montserrat"
                android:padding="5dp"
                android:text="Black"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow>

            <TextView
                android:fontFamily="@font/montserrat"
                android:padding="5dp"
                android:text="@string/delivery_location"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:fontFamily="@font/montserrat"
                android:padding="5dp"
                android:text="Pune"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow>

            <TextView
                android:fontFamily="@font/montserrat"
                android:padding="5dp"
                android:text="@string/time"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:fontFamily="@font/montserrat"
                android:padding="5dp"
                android:text="T+1 \n(After Confirmed transaction)"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow>

            <TextView
                android:fontFamily="@font/montserrat"
                android:padding="5dp"
                android:text="@string/pickup_location"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:fontFamily="@font/montserrat"
                android:padding="5dp"
                android:text="Blue"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow>

            <TextView
                android:fontFamily="@font/montserrat"
                android:padding="5dp"
                android:text="@string/additional_time"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:fontFamily="@font/montserrat"
                android:padding="5dp"
                android:text="3 days"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow>

            <TextView
                android:fontFamily="@font/montserrat"
                android:padding="5dp"
                android:text="@string/delivery_charges"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:fontFamily="@font/montserrat"
                android:padding="5dp"
                android:text="₹100"
                android:textColor="@color/black" />
        </TableRow>

        <TextView
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/delivery_charges_rate_card"
            android:textColor="@color/dark_blue" />

        <TableRow>

            <TextView
                android:fontFamily="@font/montserrat"
                android:padding="5dp"
                android:text="@string/order_quantity"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:fontFamily="@font/montserrat"
                android:padding="5dp"
                android:text="10"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow>

            <TextView
                android:fontFamily="@font/montserrat"
                android:padding="5dp"
                android:text="@string/price_per_unit"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:fontFamily="@font/montserrat"
                android:padding="5dp"
                android:text="₹1000"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow>

            <TextView
                android:fontFamily="@font/montserrat"
                android:padding="5dp"
                android:text="@string/total_cost"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:fontFamily="@font/montserrat"
                android:padding="5dp"
                android:text="₹10000"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow>

            <TextView
                android:fontFamily="@font/montserrat"
                android:padding="5dp"
                android:text="@string/pre_book_amount"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:fontFamily="@font/montserrat"
                android:padding="5dp"
                android:text="₹1000"
                android:textColor="@color/black" />
        </TableRow>

        <TextView
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/pre_book_amount_note"
            android:textColor="@color/black" />

    </TableLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/insurance_50" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:gravity="center"
        android:text="@string/waller_balance_deduction_note"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_co_cancel"
            style="@style/Widget.AppCompat.ActionButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btn_co_pro_order_now"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="@string/pre_order_now" />
    </LinearLayout>

</LinearLayout>