<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/playfair_display"
        android:gravity="center"
        android:text="@string/rate_card_details"
        android:textColor="@color/dark_blue"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/seller_location"
        android:textColor="@color/dark_blue"
        android:textSize="15sp" />

    <TableLayout
        android:id="@+id/TL_confirm_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow android:weightSum="3">

            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/location"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/delivery_charges"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/additional_time"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />
        </TableRow>


    </TableLayout>
</LinearLayout>