<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~  * Created by Vaibhav Andhare on 9/7/20 5:15 PM
  ~  * Copyright (c) 2020 . All rights reserved.
  ~  */
  -->

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/product_card_bg"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/ISPR_product_thumbnail"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:contentDescription="@string/product_image"
            android:gravity="center"
            android:src="@drawable/ic_dummy_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ISPR_product_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/product_name"
                android:textColor="@color/dark_blue"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/ISPR_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/active"
                android:textColor="@color/green"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/ISPR_product_specifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/product_specifications"
            android:textColor="@color/dark_blue"
            android:textSize="13sp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
