<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/light_dark_blue"
    app:cardCornerRadius="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/IBDP_product_thumbnail"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:contentDescription="@string/product_image"
            android:gravity="center"
            android:src="@drawable/ic_dummy_image" />

        <TextView
            android:id="@+id/IBDP_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/product_name"
            android:textColor="@color/dark_blue"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/IBDP_product_specifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/product_specifications"
            android:textColor="@color/dark_blue"
            android:textSize="15sp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
